# SomeSketches

./: .gitignore  README.md
PelcoTry/: CMakeLists.txt  ERROR_func.c  PelcoClient.c  PelcoSrv.c  PelcoSrv_DOESNT_NEED.c  READ_N_func.c  SET_ADDRESS_func.c  skel_defines.h  terminal_functions.c  upd_functions.c
RssiDial/: CMakeLists.txt  RaRssiSnrEmuWidget.cpp  RaRssiSnrEmuWidget.h  main.cpp  paintwidget.cpp  paintwidget.h
SpinBoxWid/: CMakeLists.txt  main.cpp  resFile.qrc  spinboxwid.cpp  spinboxwid.h  wid.qml
Term/: CMakeLists.txt  README.MD  Term.c
Tests/AnglesWithBOOST/: CMakeLists.txt  angleTest.cpp  build.sh
socket/: Cargo.toml
socket/src/: main.rs
